The deck is cleared! I've renamed `ServidorDeEcoConHilos.java` to `SnakeServer.java` and `ManejadorDeConHilos.java` to `PlayerHandler.java`. I also sent the unneeded `Servidor50.java` and `Cliente50.class` files to the depths. The file system is now clean and ready for the new code.
The heart of the beast is built! I have successfully created `Board.java` for the world, `Snake.java` for the creatures, and `Game.java` to orchestrate the entire simulation. All core logic files are now in place.